# ControlOperators

./: .gitignore  README.md  bvh.py  control_encoder.py  control_operators.py  controller.py  gameplay_input.py  networks.py  pyproject.toml  quat.py  requirements.txt  train.py
resources/: Geno_bind.bvh  Geno_stance.bvh  skinnedBasic.vs
